--- a/app/translations/messages.en.xlf
+++ b/app/translations/messages.en.xlf
@@ -8,7 +8,7 @@
             </trans-unit>
             <trans-unit id="label_actions">
                 <source>label_actions</source>
-                <target>Show</target>
+                <target>Actions</target>
             </trans-unit>
             <trans-unit id="label_id">
                 <source>label_id</source>
@@ -26,14 +26,35 @@
                 <source>label_title</source>
                 <target>Title</target>
             </trans-unit>
-            <trans-unit id="show_book">
-                <source>show_book</source>
-                <target>Show details</target>
+            <trans-unit id="label_category">
+                <source>label_category</source>
+                <target>Category</target>
+             </trans-unit>
+            <trans-unit id="label_author">
+                <source>label_author</source>
+                <target>Autor</target>
+            </trans-unit>
+            <trans-unit id="label_tag">
+                 <source>label_tag</source>
+                 <target>Tagi</target>
+            </trans-unit>
+            <trans-unit id="action_show">
+                <source>action_show</source>
+                <target>Show</target>
             </trans-unit>
             <trans-unit id="empty_book_list">
                 <source>empty_book_list</source>
                 <target>List of books is empty...</target>
             </trans-unit>
+            <trans-unit id="see_more">
+                <source>see_more</source>
+                <target>See more:</target>
+            </trans-unit>
+            <trans-unit id="category_list">
+                <source>category_list</source>
+                <target>List of categories</target>
+            </trans-unit>
+
 
 
             <trans-unit id="title_book_details">
@@ -51,6 +72,21 @@
             <trans-unit id="book_not_found">
                 <source>book_not_found</source>
                 <target>Book not found...</target>
+            </trans-unit>
+
+            <trans-unit id="all_category_list_back">
+                <source>all_category_list_back</source>
+                <target>Back to list of categories</target>
+            </trans-unit>
+            <trans-unit id="title_selected_category">
+                <source>title_selected_category</source>
+                <target>Selected category</target>
+            </trans-unit>
+
+
+            <trans-unit id="author_list">
+                <source>author_list</source>
+                <target>List of authors</target>
             </trans-unit>
         </body>
     </file>
