delete category + some translations

--- a/app/translations/messages.pl.xlf
+++ b/app/translations/messages.pl.xlf
@@ -58,7 +58,10 @@
                 <source>label_edit</source>
                 <target>Edytuj</target>
             </trans-unit>
-
+            <trans-unit id="label_delete">
+                <source>label_delete</source>
+                <target>Usuń</target>
+            </trans-unit>
 
             <trans-unit id="title_book_details">
                 <source>title_book_details</source>
@@ -105,6 +108,15 @@
                 <source>action_save</source>
                 <target>Zapisz</target>
             </trans-unit>
+            <trans-unit id="title_category_edit">
+                <source>title_category_edit</source>
+                <target>Edycja kategorii: %title%</target>
+            </trans-unit>
+            <trans-unit id="title_category_delete">
+                <source>title_category_delete</source>
+                <target>Usuwanie kategorii: %title%</target>
+            </trans-unit>
+
 
 
             <trans-unit id="author_list">
@@ -130,6 +142,10 @@
             <trans-unit id="title_author_create">
                 <source>title_author_create</source>
                 <target>Dodaj nowego autora</target>
+            </trans-unit>
+            <trans-unit id="title_author_edit">
+                <source>title_author_edit</source>
+                <target>Edycja autora: %title%</target>
             </trans-unit>
 
         </body>
