--- a/app/translations/messages.pl.xlf
+++ b/app/translations/messages.pl.xlf
@@ -66,6 +66,10 @@
                 <source>title_book_create</source>
                 <target>Dodaj nową książkę</target>
             </trans-unit>
+            <trans-unit id="tag_list">
+                <source>tag_list</source>
+                <target>Lista tagów</target>
+            </trans-unit>
 
 
             <trans-unit id="title_book_details">
@@ -218,6 +222,19 @@
             <trans-unit id="title_book_delete">
                 <source>title_book_delete</source>
                 <target>Usuwanie książki "%title%"</target>
+            </trans-unit>
+
+            <trans-unit id="empty_tag_list">
+                <source>empty_tag_list</source>
+                <target>Lista tagów jest pusta</target>
+            </trans-unit>
+            <trans-unit id="title_tag_edit">
+                <source>title_tag_edit</source>
+                <target>Edycja tagu "%title%"</target>
+            </trans-unit>
+            <trans-unit id="title_tag_delete">
+                <source>title_tag_delete</source>
+                <target>Usuwanie tagu "%title%"</target>
             </trans-unit>
 
         </body>
